--- a/src/index.css
+++ b/src/index.css
@@ -36,65 +36,74 @@
 @tailwind components;
 @tailwind utilities;
 
-.swiper {
-  width: 100% !important;
-  height: 100% !important;
-}
-
-.swiper-pagination-bullet {
-  width: 20px !important; 
-  height: 5px !important;
-  text-align: center !important;
-  line-height: 20px !important;
-  font-size: 12px !important;
-  opacity: 1 !important;
-  background: #89939A!important;
-  border-radius: 0 !important;
-}
-
 .swiper-button-next,
-.swiper-button-prev {
-  display: none !important;
-}
+  .swiper-button-prev {
+    display: none !important;
+  }
 
-@media (width >= 640px) {
-  .swiper-button-next,
-.swiper-button-prev {
-  display: inline-block !important;
-  color: white !important;
-}
-
-.swiper-slide img {
-  border-radius: 8px !important;
-}
-
-.swiper {
-  max-width: 592px !important;
-  max-height: 221px !important;
-}
-.swiper-wrapper {
-  height: 189px !important;
-}
-}
-
-@media (width >= 1200px) {
-  .swiper {
-    max-width: 1136px !important;
-    max-height: 432px !important;
+  .swiper-pagination {
+    bottom: 0 !important;
   }
 
   .swiper-wrapper {
-    height: 400px !important;
+    height: 350px !important;
+  }
+
+  .swiper-slide {
+    height: 90% !important;
+  }
+
+  .swiper-pagination-bullet {
+    background-color: #89939A !important;
+    width: 20px !important;
+    height: 5px !important;
+    border-radius: 0 !important;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: #0F0F11 !important;
+    width: 20px !important;
+    height: 5px !important;
+    border-radius: 0 !important;
+  }
+
+@media (width >= 640px) {
+  .swiper-slide {
+    width: 100% !important;
+  }
+
+  .swiper-button-next {
+    justify-content: flex-end !important;
+    right: 0 !important;
+  }
+
+  .swiper-button-prev {
+    justify-content: flex-start !important;
+    left: 0 !important;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: flex !important;
+    height: 95% !important;
+    margin-top: -7px !important;
+    top: 0 !important;
+    width: 52px !important;
+    background: #FAFBFC !important;
+    cursor: default !important;
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+   display: flex !important;
+   height: 95% !important;
+   justify-content: center;
+   align-items: center;
+   font-size: 16px !important;
+   width: 32px !important;
+   color: #0F0F11 !important;
+   border-radius: 48px !important;
+   border: 1px solid #89939A !important;
+   cursor: pointer !important;
   }
 }
-
-.swiper-slide img {
-  width: 100% !important;
-  height: 100% !important;
-  object-fit: fill !important;
-}
-
-.swiper-pagination-bullet-active {
-  background: #0F0F11 !important;
-}
-
