--- a/src/index.css
+++ b/src/index.css
@@ -37,35 +37,35 @@
 @tailwind utilities;
 
 .swiper-button-next,
-  .swiper-button-prev {
-    display: none !important;
-  }
+.swiper-button-prev {
+  display: none !important;
+}
 
-  .swiper-pagination {
-    bottom: 0 !important;
-  }
+.swiper-pagination {
+  bottom: 0 !important;
+}
 
-  .swiper-wrapper {
-    height: 350px !important;
-  }
+.swiper-wrapper {
+  height: 350px !important;
+}
 
-  .swiper-slide {
-    height: 90% !important;
-  }
+.swiper-slide {
+  height: 90% !important;
+}
 
-  .swiper-pagination-bullet {
-    background-color: #89939A !important;
-    width: 20px !important;
-    height: 5px !important;
-    border-radius: 0 !important;
-  }
+.swiper-pagination-bullet {
+  background-color: #89939a !important;
+  width: 20px !important;
+  height: 5px !important;
+  border-radius: 0 !important;
+}
 
-  .swiper-pagination-bullet-active {
-    background-color: #0F0F11 !important;
-    width: 20px !important;
-    height: 5px !important;
-    border-radius: 0 !important;
-  }
+.swiper-pagination-bullet-active {
+  background-color: #0f0f11 !important;
+  width: 20px !important;
+  height: 5px !important;
+  border-radius: 0 !important;
+}
 
 @media (width >= 640px) {
   .swiper-slide {
@@ -89,21 +89,21 @@
     margin-top: -7px !important;
     top: 0 !important;
     width: 52px !important;
-    background: #FAFBFC !important;
+    background: #fafbfc !important;
     cursor: default !important;
   }
 
   .swiper-button-prev::after,
   .swiper-button-next::after {
-   display: flex !important;
-   height: 95% !important;
-   justify-content: center;
-   align-items: center;
-   font-size: 16px !important;
-   width: 32px !important;
-   color: #0F0F11 !important;
-   border-radius: 48px !important;
-   border: 1px solid #89939A !important;
-   cursor: pointer !important;
+    display: flex !important;
+    height: 95% !important;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px !important;
+    width: 32px !important;
+    color: #0f0f11 !important;
+    border-radius: 48px !important;
+    border: 1px solid #89939a !important;
+    cursor: pointer !important;
   }
 }
