--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,11 @@
     height: 432px !important;
   }
 }
+
+.Carousel .slick-track {
+  @apply space-x-4;
+}
+
+.slick-slider {
+  position: static !important;
+}
